styles/mainPage/styles.css
:root {
  --color-white: #fff;
  --color-black: #000;
  --color-lighter-brown: #877560;
  --color-even-lighter-brown: #96897a;
  --color-beige: #fcf2e6;
  --color-dark-beige: #eee3d4;
  --color-brown: #321d05;
  --color-light-blue: #eaf4f6;
  --color-blue: #8fd9e4;
  --color-light-purple: #f5f1ff;
  --color-dark-purple: #7983ca;
  --color-light-orange: #f9d8ad;
  --color-dark-orange: #c57b59;
  --color-dark-green: #5d6930;
  --color-light-green: #878a6d;
  --color-green: #f1ffcb;
}
.dark-mode {
  --color-white: #000;
  --color-black: #fcf2e6;
  --color-beige: #321d05;
  --color-dark-beige: #241806;
  --color-brown: #fcf2e6;
  --color-lighter-brown: #baaa98;
  --color-even-lighter-brown: #544c44;
  --color-light-green: #585a48;
}
html {
  scroll-behavior: smooth;
  background-color: var(--color-beige);
}

/* navbar */

.navbar {
  position: fixed;
  width: 100%;
  background-color: var(--color-beige);
  height: 5rem;
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  z-index: 9999;
  gap: 2rem;
}
.navbar-quiz {
  position: fixed;
  width: 100%;
  background-color: var(--color-beige);
  height: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 9999;
}
.logo-container {
  width: auto;
  grid-column: 1;
  z-index: 9999;
}
.logo-img {
  width: auto;
  height: 2rem;
  cursor: pointer;
  z-index: 9999;
  margin-left: 3rem;
}
.nav-menu-container {
  display: flex;
  justify-content: end;
  margin-right: 2.5rem;
  grid-column: 2;
}
.nav-menu-container-quiz {
  left: 2.5rem;
  position: absolute;
}
.nav-menu-landing-page {
  align-items: center;
  gap: 3rem;
  display: flex;
}
.nav-menu-item a {
  cursor: pointer;
  text-transform: uppercase;
  color: var(--color-brown);
  transition-duration: 200ms;
  font-weight: 400;
  font-size: 0.8rem;
  text-decoration: none;
}
.nav-menu-item a:hover {
  color: var(--color-lighter-brown);
  transition-duration: 200ms;
}
.contact-btn {
  border: none;
  background-color: var(--color-brown);
  color: var(--color-beige);
  padding: 0.9rem 1.4rem 0.9rem 1.4rem;
  border-radius: 100px;
  cursor: pointer;
  text-transform: uppercase;
  font-size: 0.7rem;
}

/* about page */

.about-page {
  height: 100vh;
  width: 100vw;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-beige);
  background-image: url("../../assets/images/plant1.png");
  background-repeat: no-repeat;
  background-position: left 5% bottom;
  background-size: 20rem auto;
  user-select: none;
}
.about-content {
  text-align: center;
  margin-top: 5rem;
}
.title-about {
  padding-bottom: 2rem;
  position: relative;
}
.about-cover-img {
  max-width: 40rem;
  width: 100%;
  padding-bottom: 1rem;
  z-index: 9999;
}
.title-about h2 {
  font-weight: 500;
  color: var(--color-black);
  font-size: 1.5rem;
  position: relative;
}
.about-description {
  max-width: 45rem;
  width: 100%;
  color: var(--color-black);
  position: relative;
}
.about-description p {
  font-size: 1.3rem;
  line-height: 30px;
  font-weight: 300;
  padding-bottom: 2rem;
  background-color: var(--color-beige);
  border-radius: 5px;
}
.quiz-btn {
  border: none;
  background-color: var(--color-brown);
  color: var(--color-beige);
  padding: 0.9rem 1.4rem 0.9rem 1.4rem;
  border-radius: 100px;
  cursor: pointer;
  text-transform: uppercase;
  font-size: 1rem;
  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.1);
  transition-duration: 200ms;
}
.quiz-btn:hover {
  transition-duration: 200ms;
  transform: scale(0.95);
}
.plant1-img {
  max-width: 20rem;
  width: 100%;
  height: auto;
  object-fit: contain;
}
.plant1-container {
  position: absolute;
  z-index: 0;
}
.bold-word {
  text-decoration: underline;
}
.about-blob-img {
  position: absolute;
  top: 0;
  right: 0;
  object-fit: contain;
}

/* settings component */

.settings-container {
  position: fixed;
  bottom: 0;
  left: 4rem;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}
.settings-line {
  height: 10rem;
  width: 0.2rem;
  background-color: var(--color-lighter-brown);
}
#music-btn {
  background-color: var(--color-beige);
  border: 1px solid var(--color-lighter-brown);
  padding: 0.5rem;
  color: var(--color-brown);
  cursor: pointer;
  background-image: url("https://cdn.icon-icons.com/icons2/2226/PNG/512/play_icon_134504.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 0.8rem auto;
}
.dark-btn {
  width: 1rem;
  height: auto;
  cursor: pointer;
  display: block;
}

/* missions page */

.mission-page {
  height: 100vh;
  width: 100vw;
  position: relative;
  background-color: var(--color-beige);
  display: flex;
  align-items: end;
  justify-content: center;
}
.missions-container {
  height: 89vh;
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: 1fr 1fr;
  gap: 3rem;
}

/* missions page left side */

.mission-left-side {
  grid-column: 1;
  text-align: center;
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.mission-left-content {
  padding-left: 5rem;
  gap: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.mission-left-title {
  font-size: 3rem;
  width: 100%;
  padding-bottom: 1.5rem;
  color: var(--color-black);
  border-bottom: 1px solid var(--color-brown);
}
.mission-left-description {
  font-size: 1rem;
  max-width: 40rem;
  color: var(--color-black);
  line-height: 22px;
  text-align: left;
}

/* cards left side */

.cards-container {
  display: grid;
grid-template-rows: 1fr 1fr 1fr;
  width: 100%;
  justify-content: center;
  height: 45vh;
  /* background-color: red; */
}
/* ... */

